force-app/main/default/objects/PatchManager__c/PatchManager__c.object-meta.xml
<CustomObject>
    <label>PatchManager</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PatchManagers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>