force-app/main/default/objects/PatchManager__c/fields/AccountExecutive__c.field-meta.xml
<CustomField>
    <fullName>AccountExecutive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FieldRep</relationshipName>
    <type>Lookup</type>
</CustomField>