force-app/main/default/objects/PatchManager__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>Account__c</formula>
    <label>AccountID</label>
    <type>Text</type>
</CustomField>