force-app/main/default/objects/PatchManager__c/fields/Alliance_BDM__c.field-meta.xml
<CustomField>
    <fullName>Alliance_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alliance BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PatchManagersAllianceBDM</relationshipName>
    <type>Lookup</type>
</CustomField>