force-app/main/default/objects/PatchManager__c/fields/CDMActive__c.field-meta.xml
<CustomField>
    <fullName>CDMActive__c</fullName>
    <formula>IF(CDM__r.IsActive=TRUE,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDM Active</label>
    <type>Checkbox</type>
</CustomField>