force-app/main/default/objects/PatchManager__c/fields/ChannelDevelopmentManagerName__c.field-meta.xml
<CustomField>
    <fullName>ChannelDevelopmentManagerName__c</fullName>
    <formula>CDM__r.FirstName+&quot; &quot;+CDM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Development Manager Name</label>
    <type>Text</type>
</CustomField>