force-app/main/default/objects/PatchManager__c/fields/CountryGlobal__c.field-meta.xml
<CustomField>
    <fullName>CountryGlobal__c</fullName>
    <label>CountryGlobal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>