force-app/main/default/objects/PatchManager__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AgencyType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Federal_Department</valueSetName>
    </valueSet>
</CustomField>