force-app/main/default/objects/PatchManager__c/fields/Distributor_Rep__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Disti</relationshipName>
    <type>Lookup</type>
</CustomField>