force-app/main/default/objects/PatchManager__c/fields/Industry_Category__c.field-meta.xml
<CustomField>
    <fullName>Industry_Category__c</fullName>
    <label>Industry Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLG</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Aerospace and Defense</fullName>
                <isActive>false</isActive>
                <label>Aerospace and Defense</label>
            </value>
            <value>
                <fullName>Agriculture</fullName>
                <isActive>false</isActive>
                <label>Agriculture</label>
            </value>
            <value>
                <fullName>Apparel</fullName>
                <isActive>false</isActive>
                <label>Apparel</label>
            </value>
            <value>
                <fullName>Banking</fullName>
                <isActive>false</isActive>
                <label>Banking</label>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
                <isActive>false</isActive>
                <label>Biotechnology</label>
            </value>
            <value>
                <fullName>Casino</fullName>
                <isActive>false</isActive>
                <label>Casino</label>
            </value>
            <value>
                <fullName>Chemicals</fullName>
                <isActive>false</isActive>
                <label>Chemicals</label>
            </value>
            <value>
                <fullName>Communications</fullName>
                <isActive>false</isActive>
                <label>Communications</label>
            </value>
            <value>
                <fullName>Construction</fullName>
                <isActive>false</isActive>
                <label>Construction</label>
            </value>
            <value>
                <fullName>Construction Supply</fullName>
                <isActive>false</isActive>
                <label>Construction Supply</label>
            </value>
            <value>
                <fullName>Consulting</fullName>
                <isActive>false</isActive>
                <label>Consulting</label>
            </value>
            <value>
                <fullName>Education</fullName>
                <isActive>false</isActive>
                <label>Education</label>
            </value>
            <value>
                <fullName>Electronics</fullName>
                <isActive>false</isActive>
                <label>Electronics</label>
            </value>
            <value>
                <fullName>Energy</fullName>
                <isActive>false</isActive>
                <label>Energy</label>
            </value>
            <value>
                <fullName>Engineering</fullName>
                <isActive>false</isActive>
                <label>Engineering</label>
            </value>
            <value>
                <fullName>Entertainment</fullName>
                <isActive>false</isActive>
                <label>Entertainment</label>
            </value>
            <value>
                <fullName>Environmental</fullName>
                <isActive>false</isActive>
                <label>Environmental</label>
            </value>
            <value>
                <fullName>Federal Government</fullName>
                <isActive>false</isActive>
                <label>Federal Government</label>
            </value>
            <value>
                <fullName>Finance</fullName>
                <isActive>false</isActive>
                <label>Finance</label>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
                <isActive>false</isActive>
                <label>Food &amp; Beverage</label>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
            <value>
                <fullName>Hospitality</fullName>
                <isActive>false</isActive>
                <label>Hospitality</label>
            </value>
            <value>
                <fullName>Human Resources</fullName>
                <isActive>false</isActive>
                <label>Human Resources</label>
            </value>
            <value>
                <fullName>IT and Services</fullName>
                <isActive>false</isActive>
                <label>IT and Services</label>
            </value>
            <value>
                <fullName>Insurance</fullName>
                <isActive>false</isActive>
                <label>Insurance</label>
            </value>
            <value>
                <fullName>Legal</fullName>
                <isActive>false</isActive>
                <label>Legal</label>
            </value>
            <value>
                <fullName>MSP</fullName>
                <isActive>false</isActive>
                <label>MSP</label>
            </value>
            <value>
                <fullName>Machinery</fullName>
                <isActive>false</isActive>
                <label>Machinery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>