force-app/main/default/objects/PatchManager__c/fields/InsideAccountExecutive__c.field-meta.xml
<CustomField>
    <fullName>InsideAccountExecutive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IAE</relationshipName>
    <type>Lookup</type>
</CustomField>