force-app/main/default/objects/PatchManager__c/fields/MatchedAccountOwner__c.field-meta.xml
<CustomField>
    <fullName>MatchedAccountOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MatchedOwner</relationshipName>
    <type>Lookup</type>
</CustomField>