force-app/main/default/objects/PatchManager__c/fields/Metro__c.field-meta.xml
<CustomField>
    <fullName>Metro__c</fullName>
    <label>Marketing Metro Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>