force-app/main/default/objects/PatchManager__c/fields/Metro_Area__c.field-meta.xml
<CustomField>
    <fullName>Metro_Area__c</fullName>
    <label>Metro Area</label>
    <type>TextArea</type>
</CustomField>