force-app/main/default/objects/PatchManager__c/fields/MSP_Rep__c.field-meta.xml
<CustomField>
    <fullName>MSP_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSP Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MSP</relationshipName>
    <type>Lookup</type>
</CustomField>