force-app/main/default/objects/PatchManager__c/fields/OwnerEmployeeID__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmployeeID__c</fullName>
    <formula>Owner:User.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Employee ID</label>
    <type>Text</type>
</CustomField>