force-app/main/default/objects/PatchManager__c/fields/SalesDevelopmentName__c.field-meta.xml
<CustomField>
    <fullName>SalesDevelopmentName__c</fullName>
    <formula>SDR__r.FirstName+&quot; &quot;+SDR__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Development Name</label>
    <type>Text</type>
</CustomField>