force-app/main/default/objects/PatchManager__c/fields/SDRActive__c.field-meta.xml
<CustomField>
    <fullName>SDRActive__c</fullName>
    <formula>IF(ISBLANK(SDR__c),FALSE,SDR__r.IsActive)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDR Active?</label>
    <type>Checkbox</type>
</CustomField>