force-app/main/default/objects/PatchManager__c/fields/SDRVacant__c.field-meta.xml
<CustomField>
    <fullName>SDRVacant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDR Vacant</label>
    <type>Checkbox</type>
</CustomField>