force-app/main/default/objects/PatchManager__c/fields/SearchCity__c.field-meta.xml
<CustomField>
    <fullName>SearchCity__c</fullName>
    <formula>IF( Zip_code__c == null,  City__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SearchCity</label>
    <type>Text</type>
</CustomField>