force-app/main/default/objects/PatchManager__c/fields/SearchCountry__c.field-meta.xml
<CustomField>
    <fullName>SearchCountry__c</fullName>
    <formula>IF( City__c = NULL &amp;&amp;  Zip_code__c = NULL &amp;&amp;  TEXT(StateGlobal__c) = NULL ,  TEXT(CountryGlobal__c) , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SearchCountry</label>
    <type>Text</type>
</CustomField>