force-app/main/default/objects/PatchManager__c/fields/SearchCountryCode__c.field-meta.xml
<CustomField>
    <fullName>SearchCountryCode__c</fullName>
    <formula>IF( City__c = NULL &amp;&amp; Zip_code__c = NULL &amp;&amp; TEXT(StateGlobal__c) = NULL , Country__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SearchCountryCode</label>
    <type>Text</type>
</CustomField>