force-app/main/default/objects/PatchManager__c/fields/SearchState__c.field-meta.xml
<CustomField>
    <fullName>SearchState__c</fullName>
    <formula>IF(City__c=NULL &amp;&amp;  Zip_code__c= NULL ,  TEXT(StateGlobal__c) , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SearchState</label>
    <type>Text</type>
</CustomField>