force-app/main/default/objects/PatchManager__c/fields/Segment_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Segment_Revenue__c</fullName>
    <label>Segment Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>