force-app/main/default/objects/PatchManager__c/fields/SMB_Owner__c.field-meta.xml
<CustomField>
    <fullName>SMB_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMB Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PatchManagers2</relationshipName>
    <type>Lookup</type>
</CustomField>