force-app/main/default/objects/PatchManager__c/fields/StateGlobal__c.field-meta.xml
<CustomField>
    <fullName>StateGlobal__c</fullName>
    <label>StateGlobal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CountryGlobal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_Province</valueSetName>
    </valueSet>
</CustomField>