force-app/main/default/objects/PatchManager__c/fields/Territory_Geo__c.field-meta.xml
<CustomField>
    <fullName>Territory_Geo__c</fullName>
    <label>Territory Geo</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>