force-app/main/default/objects/PatchManager__c/fields/TLevel0__c.field-meta.xml
<CustomField>
    <fullName>TLevel0__c</fullName>
    <label>T-Level 0</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>T_Level_0</valueSetName>
    </valueSet>
</CustomField>