force-app/main/default/objects/PatchManager__c/fields/TLevel1__c.field-meta.xml
<CustomField>
    <fullName>TLevel1__c</fullName>
    <label>T-Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>T_Level_1</valueSetName>
    </valueSet>
</CustomField>