force-app/main/default/objects/PatchManager__c/fields/TLevel2__c.field-meta.xml
<CustomField>
    <fullName>TLevel2__c</fullName>
    <label>T-Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>T_Level_2</valueSetName>
    </valueSet>
</CustomField>