force-app/main/default/objects/PatchManager__c/recordTypes/Domain.recordType-meta.xml
<RecordType>
    <fullName>Domain</fullName>
    <active>true</active>
    <description>Domain based routing keys - Federal and Channel Only</description>
    <label>Domain</label>
</RecordType>