force-app/main/default/objects/PatchManager__c/recordTypes/Geographic.recordType-meta.xml
<RecordType>
    <fullName>Geographic</fullName>
    <active>true</active>
    <label>Geographic</label>
</RecordType>