force-app/main/default/objects/PatchManager__c/recordTypes/L2A.recordType-meta.xml
<RecordType>
    <fullName>L2A</fullName>
    <active>true</active>
    <description>Lead to Account Matched key</description>
    <label>L2A</label>
</RecordType>