force-app/main/default/objects/PatchManager__c/recordTypes/Named.recordType-meta.xml
<RecordType>
    <fullName>Named</fullName>
    <active>true</active>
    <label>Named</label>
</RecordType>