force-app/main/default/objects/PatchManager__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>StateGlobal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CountryGlobal__c</field>
        <operation>equals</operation>
        <value>United Kingdom</value>
    </filters>
    <label>All</label>
</ListView>