force-app/main/default/objects/PatchManager__c/listViews/GEO_KEYS.listView-meta.xml
<ListView>
    <fullName>GEO_KEYS</fullName>
    <columns>NAME</columns>
    <columns>Industry_Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Theatre__c</columns>
    <columns>Area__c</columns>
    <columns>Region__c</columns>
    <columns>CountryGlobal__c</columns>
    <columns>StateGlobal__c</columns>
    <columns>SDR__c</columns>
    <columns>SDRActive__c</columns>
    <columns>CDM__c</columns>
    <columns>CDMActive__c</columns>
    <columns>Alliance_BDM__c</columns>
    <columns>InsideAccountExecutive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PatchManager__c.Geographic</value>
    </filters>
    <label>GEO KEYS</label>
</ListView>